[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-reddit"
version = "0.1.0"
description = "Minimal Reddit integration scaffold for Hermes / MeshPilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "praw>=7.8.1",
  "requests>=2.31",
]

[project.scripts]
hermes-reddit = "hermes_reddit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
